# ChangeLog for dev-lang/orc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/orc/ChangeLog,v 1.25 2012/05/21 18:48:45 xarthisius Exp $

  21 May 2012; Kacper Kowalik <xarthisius@gentoo.org> orc-0.4.9.ebuild:
  Add missing inheritance of eutils.eclass

  15 May 2012; Alexis Ballier <aballier@gentoo.org> orc-0.4.16.ebuild:
  keyword ~amd64-fbsd

*orc-0.4.16 (15 Feb 2012)

  15 Feb 2012; Tim Harder <radhermit@gentoo.org> +orc-0.4.16.ebuild:
  Version bump. Update to EAPI 4.

  24 Nov 2011; Naohiro Aota <naota@gentoo.org> orc-0.4.14.ebuild:
  Add ~x86-fbsd

  11 Oct 2011; Jeroen Roovers <jer@gentoo.org> orc-0.4.14.ebuild:
  Stable for HPPA (bug #385703).

  03 Oct 2011; Jeroen Roovers <jer@gentoo.org> orc-0.4.14.ebuild:
  Marked ~hppa (bug #373639).

  06 Aug 2011; Zac Medico <zmedico@gentoo.org> orc-0.4.14.ebuild:
  Add ~x86-linux keyword.

*orc-0.4.14 (03 May 2011)

  03 May 2011; Arun Raghavan <ford_prefect@gentoo.org> -orc-0.4.13.ebuild,
  +orc-0.4.14.ebuild:
  Another bug fix release, so replacing previous version.

*orc-0.4.13 (19 Apr 2011)

  19 Apr 2011; Arun Raghavan <ford_prefect@gentoo.org> -orc-0.4.12.ebuild,
  +orc-0.4.13.ebuild:
  Bmp to 0.4.13. Fixes serious code generation issues in SSE, Altivec, so
  remove 0.4.12.

*orc-0.4.12 (16 Apr 2011)

  16 Apr 2011; Arun Raghavan <ford_prefect@gentoo.org> orc-0.4.9.ebuild,
  +orc-0.4.12.ebuild:
  Bump to 0.4.12. gcc 4.6 warning fixes and some minor fixes/enhancements.

  18 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org> orc-0.4.11.ebuild,
  metadata.xml:
  Add ~arm, tested by steev on armv7, add gstreamer as herd

  05 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> orc-0.4.11.ebuild:
  x86 stable wrt bug #353321

  31 Jan 2011; Markos Chandras <hwoarang@gentoo.org> orc-0.4.11.ebuild:
  Stable on amd64 wrt bug #353321

  30 Oct 2010; Fabian Groffen <grobian@gentoo.org> orc-0.4.11.ebuild: