@@ -1,13 +1,28 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX orc-0.4.9-make-valgrind-optional.patch 1219 SHA256 6a1ed3052955fb552782d8fb31f24fa625d23c88d8ef574d2b58ebfe63f8a867 SHA512 10632a5f8edf77474be2e700d23e482ad2656494e2f0517753c94bd02c36b582c12e47de84eda7be5ded1c417fec985768f7e0ee825f74ccda00aaec2d8d9b1e WHIRLPOOL b5165ed6d24a24c5d2f3ab4056cd6ada88290918624bdbd63a51e3cf74817f8cded36a58c8b74c620e4a4b515747d9caa5c3a2960f1419297bf8f401ced2b154
 DIST orc-0.4.10.tar.gz 664830 SHA256 5001a0034edc06800b546246fbe0407ba6e9759c9583d5d93adba3557b6a777e SHA512 bf33152d07e3f05a5b7f9d4de607054c8872e44f06f1ead2963044b24b0adfd69ca91f4c46b6af9d540fa846b1b40f01ffaf774243566915ec500329c46c173b WHIRLPOOL 24d1b1c3f1f85e491ade791252a4dbc8da266959b0b381b382651ba0ef2b5ea805295f0932407ef39b83407a1181aa6dfce1c88cfe063eda0d68f02018c085e8
 DIST orc-0.4.11.tar.gz 676224 SHA256 6ec60521a11339eda36f1e2210d08ae95010d769575e471aaf365b89bca8d031 SHA512 8e54e682b9e509deff709aef2bee3de3a632949284b62c0c74407ed5fdc651f61b07ff476fd4a9ebdc5fb597349af5546ba9a9ace4b33aee36eee902319d56bb WHIRLPOOL 21e98a53a62f2e3a2c77189a2728ba370f3cd7b954dae8c520856b57a34ae2106ddfd329f0f2153bb997f32d720176aa4a6b806aac93896cf12d99c48be4805c
 DIST orc-0.4.14.tar.gz 660407 SHA256 6b0c536984871954364976516ea0328e2dcd856111726a23e609504ba2b12313 SHA512 961d71caeff340ac3d98aedad398f7f87eaf7d41a7c136a14a15a7ef3713bbd109ce35642e4f8275ceb9bff2796288bf85b5bd183a4dac600f0ba8f8e8ef9fb6 WHIRLPOOL ace652a92f476e5c2fcb4847d69022ebcaa688a6d6923e7cd332474e4f60e6a10b4b33fe5ac8c2ddca7fb073208e7052046a8d793ea31ee78f87913ddd8192a9
 DIST orc-0.4.16.tar.gz 668368 SHA256 700e4edba20a0ed42164b645da26ce515b883d4c4633b222302f1e541f2a58ab SHA512 e9d3c4e8682119253c201addcd2cb623a61e45d7cb8b0b406a3509f1a9443af9375a418a68f832d29af4a523cd91bf702bdd002cf143be0f7cc9f5a0b77f7ae0 WHIRLPOOL 43e3fafb9869f2f1c678cdb457b958a2ef6955344f71a3377e319c8d42f5ca269e9d4c57a85a792959a6e50d60023bf6717bd8461270b1526aa55cb9657d5012
 DIST orc-0.4.9.tar.gz 654699 SHA256 aac7af5d37ce87b1d3d014822f2e2b6be83daff4d752f56a45766e5a807e6b53 SHA512 1bfde04fa83ae441c3f0051f4d9d6397e231a17428a26c1694111f7531d8692a64ee032cbc003273996e059c315185f871842c1c5eed5962aec05f1c9601bc46 WHIRLPOOL f9c02f88b6b695382b44f80e26c1c455fe911b80913c00f050efdd54d605309056b91e6b53049983d2440b2a3dc2a84b3e30dd5ff4b4df6b0c1b21eeef8c6ae6
-EBUILD orc-0.4.10.ebuild 984 SHA256 b7ec4769e61b0f2728b10b751f557c33507051aa0d86b2e6e080ece13180bbf1 SHA512 9064fcf8c0ec8d47841b551e8ae9bd0e3873fd58c11e5928982c4f72befcc94efd815837e0485f5385809f4a493cbc83a46faa0d74d3582225ded7f0c2800f71 WHIRLPOOL ae165e346f4f65ef9715702b0ce05282e746f3f580e4d845a991195e75d95d691ae91ed57abe43ae2aa7352f061e7292e0857acceee4b935929d8984a4f5d42b
-EBUILD orc-0.4.11.ebuild 1296 SHA256 660063d5f6273a584c3bd2ff7b71076f58685f319d70bc13d6009f56b27606f4 SHA512 d2e45d6c7be3283441b82f0b7551862dfea48f7c2965190f76227c2d801a5f31b7344b362b87c86b81f14f061e19171872d57c8d588bbd9938d12f6cea8bdf36 WHIRLPOOL 12cd2c2a036dfd1b8840afd85a01f5bfeb2c1dd34e0565fd6367672156a5c7d84b79ec5de44e270448a7bc9f5687e610692a264a48d56a5ab98a77f6064d2c1c
-EBUILD orc-0.4.14.ebuild 1321 SHA256 766d289fe729c7f8e5d48ad8a74f35f65589b0226ffb9eca3ecfbb82cb51c01b SHA512 c530c1dd73d4d9b0d4628fcf82951bbfbe3c10afddcd5f6931be7a5a56a199304400fb2acab438b4704b6c988d509ee68d76e16f6c6310193cf273b445803332 WHIRLPOOL 5cda7c17bf81c507089a3443a7704a5f3a3f2db7a3a6c01ffa20e8757f98f5df77583f3fade9f82f51396f8c0012efd31c76e15ed39bf5215aeb693961715e38
-EBUILD orc-0.4.16.ebuild 1256 SHA256 d2320aaa6c808243238bd18a90c1a88b72f2aba74f3110a516b86e082b4408ec SHA512 f54b2ec702d5e71cc66b97281f1a295ff274bbfff127c84f1c8ef212e47641f578f8f50deb0915519e9074a6eaed08263676666d2c78d8179e92101104cfdd81 WHIRLPOOL 9819dfbce86a36af965595816843a270f89fdaaabf9cc96db9977c02e718b9e6e2d3b961519b1db0f84c647c2cef9038eff7828146505dd8f219c7767c0e95a8
-EBUILD orc-0.4.9.ebuild 1068 SHA256 de57b406a49e5f05a491baa6468ba84b4c86693c78663640777caa8210478aa7 SHA512 b09b9c340f96dbbc652329b8f85c484e481b8831d4c667ded4fcae46244a6174faed89acc139a592d79e9ef2810d9f710358baadf5e78ebd21f182e6453a2054 WHIRLPOOL d13bb24cd337b3e893589aa8aba2c5fa41fe11ab9c83669ccf6a0115449c72690cbefd6c6a48dcbfe77b86336ab8915cae2db613f7a3449dc1771c225967bb6a
-MISC ChangeLog 3522 SHA256 9a7b4686bf1e1b5039ae6c9eb01ba9554387f89717a27954050669338fd57391 SHA512 905aa6431c08d410efaecf3461f4f442bc32b49b3ff1ace8da21817e3948a2abc23e1d361f141d3bcce024df9f5d2273fb16190489364bdb0e98872c8d77f02f WHIRLPOOL 2c477e630136e7fe38ef3e26072b51c74563fa76b1b0302af4aab5d126ac23468a03be45ccdbb134b67faee9386e31660ce5eadadd138641fbbdb32472c0ea67
+EBUILD orc-0.4.10.ebuild 1027 SHA256 57d5ea46050257ac9f6b9592147a486c4a741844bffd4fa063cb2baa17534e3f SHA512 758df36ec7a2d0f05ff2f8360308ecb724e3d04f73b49b191d3696262e37fe92592c5f44d96baa5d91028a2c7fd78cf4314eb6143ee025311c710ae3b30bb9fe WHIRLPOOL 71858d7728125387b6a481e584616443a793b86b1a9a07b01d8bc03e90af3aee159caa56c35049ccef69a7a895186a2f90d172211b53899fcbbf6eb1bb451d3c
+EBUILD orc-0.4.11.ebuild 1343 SHA256 63a1543b92b1e57c30f2e5e9233f0290f0760895aa1f28f75ca35a0951f22ebb SHA512 60bbbd24b5d576eda670e09f463830661142f665c01251feea25ef2ac37cd12591494b651298150a9b058dbe9a2d2831b065534d11672e69b09a1f709103a867 WHIRLPOOL 89b5894c7becf98e79a73e1ed55fc7701f90a638726b8558f2bdd7984be008088eac68895195b33be4e743df1226d7a6d94c3f70825dfe258ce5fc07037880fc
+EBUILD orc-0.4.14.ebuild 1371 SHA256 152e0adea4c933fe4868da3d5e08fd21dfc0330c5296a135d8380d39aa03bd3d SHA512 537fa1a27ef1de1ccb517e157fb55b15b7308aa2779b579ec5ea888146225f89d79fbb348dc3b9b29d6c0d9e42f519838c7f379576f11389aed42844e4c087a8 WHIRLPOOL 12fe0038782db97c6c75db3682bbc95e0f9023894024c229fa769390921573007b0407fd1f359c3cf34c7713710ced892335138f78602f5d74169b0436744423
+EBUILD orc-0.4.16-r1.ebuild 1301 SHA256 ee41380c7225677844dd7874568f0bb5ee2395ffbe0ce48d74a552fc47d40261 SHA512 21517cb2a758b3aa1feb786a3db3e93569fda971724e914aa5590977eb63e7a140ee7cfcefacb9deb3b7f5a870bcd1448abd64b2f218507c3ac2cae31c7abade WHIRLPOOL d31364b2f34d41b4eb73cabe9147d806a19f2d93fbb4b743142b93216f9dffe83267f7b31b02883edc880702cf62e595346a4411f4867f6d314d3cd5eeb4fe6b
+EBUILD orc-0.4.16.ebuild 1303 SHA256 f9124d8d7e1346e3136ab84b44e0718fdb2d855fedc93ac1d1633323c02fe056 SHA512 dcd6caaf920846e6ee6cdb8d1dae06c22327dc60b5e31744d9bcff8e8607c257fad079db84af829712d56d1c26eb73f64e7c121493e1d0c4b295ce63f7cfd882 WHIRLPOOL ddec433fb189585f457c1e338e5f222ba9ad75be863f49aa11e147b73a0e832e8e0fa3fb41455240d87983de6beea941cc4cc8758c2dc214654f6656c064e469
+EBUILD orc-0.4.9.ebuild 1113 SHA256 38224d8d1d517efa12e504d2827d4c74fd3037a61fbaf44f2c0553a03de83890 SHA512 e49ebc00dffd68c779d346a878f07fecb204f66519b1007cd7a4058f192a12dd27ed71a846bf086baca9f694ab86914bb9c70a4f61eb2d882920726bc5f5402c WHIRLPOOL 0397c9c753c99b7a762a33fe7a06bf6f374189daf07bff84fe391e9348b03681a8a334ea72cb80bfd16900cd617af91cb1a5684ddf1cdff386027ed51b233c1f
+MISC ChangeLog 3872 SHA256 7d3ad45402fc1d54647809d242c77809a4c55d660d610d83ca39add9d57052f5 SHA512 ae6a2e46b34c0c9e99767acf6e9f1be3b260da4b7c47f813a823c5725b13c0fbf9b38f0fa09c6e593ba84f99d5a6c4a291cb327f41dd634e85b8c906858b3e18 WHIRLPOOL 99f4e7df2a90f2064da5ae0374dc43822491b5208e4d7f5da832435e22b67db48455381ea403a79c659b2c2ffdb2251cbf16200c16e87633be17b5f896ee80cb
 MISC metadata.xml 164 SHA256 63f0c98dbf90a122aa2c9bd6088d3b8a7de6b79f90558e53d175603207f1b01d SHA512 5de3dc5635ad165cdd027b8674ceddb630c486e2458c83fc5f543db675005ca535a4ddcba8b5578861be1ecb358cee1606f7864f20324b41df555006e005afc6 WHIRLPOOL 829c750ce54be5edbc6496df4d4ff40c572d432b8860a237b1c3d3f2e40a44dad2316c44c848a48a1a0583e5155e979dd3a4dfecb2cb6b911d054d31d3b2219d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBCAAGBQJQnT+kAAoJEJ0WA1zPCt1hPuYH/Rkd3Jjcm2MRNZGeTD/I44K4
+a6CFpQDpt+IGnjJI2dcsfJ1+VKix0xOC4afRMeppRHyFp4zVJw1qC86Py0k1F5gV
+kY0oQO1ERAYidy03dVfmT8g5UOnZl3qkK3A7EHVtu/gR9s/CIdvnfaBD8vSTsEmJ
+mSWv4iYnRBzaRezCSPMOH/JKV4iSpO/eH/2am+9JjsgdcXYbl/WZmWy9qXViDvml
+T0a7mPG23MgJqpzA9E4ZZmXE63Rd3rskbSe8h+Fqt7Ali8qh9wtit/lXX9JAUWjw
+NC0vVZIByl/l7unebZYktMBqNUpUYLP+I5P0Cc/QlNSlra348ai0gptCKwP/mNk=
+=LFeX
+-----END PGP SIGNATURE-----
