@@ -1,8 +1,8 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/orc/orc-0.4.14.ebuild,v 1.6 2012/11/09 17:38:42 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/orc/orc-0.4.16-r1.ebuild,v 1.1 2012/11/09 17:38:42 tetromino Exp $
 
-EAPI=3
+EAPI=4
 inherit autotools flag-o-matic
 
 DESCRIPTION="The Oil Runtime Compiler, a just-in-time compiler for array operations"
@@ -11,8 +11,12 @@ SRC_URI="http://code.entropywave.com/download/orc/${P}.tar.gz"
 
 LICENSE="BSD BSD-2"
 SLOT="0"
-KEYWORDS="~amd64 ~arm hppa ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+KEYWORDS="~amd64 ~arm ~hppa ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
 IUSE="static-libs examples"
+
+RDEPEND=""
+DEPEND="${RDEPEND}
+	dev-util/gtk-doc-am"
 
 src_prepare() {
 	if ! use examples; then
@@ -28,14 +32,11 @@ src_configure() {
 	# but along the same lines
 	[[ ${CHOST} == *-darwin* ]] && filter-flags -O*
 	econf \
-		$(use_enable static-libs static) \
-		--disable-dependency-tracking \
-		--with-html-dir="${EPREFIX}"/usr/share/doc/${PF}/html
+		$(use_enable static-libs static)
 }
 
 src_install() {
-	emake DESTDIR="${D}" install || die
-	dodoc README TODO
+	default
 
 	find "${ED}" -name '*.la' -delete
 }
